<resources>
    <string name="app_name">Daily News</string>
    <string name="title_breaking_news">Breaking News</string>
    <string name="title_search_news">Search News</string>
    <string name="title_bookmarks">Bookmarks</string>
    <string name="breaking">Breaking</string>
    <string name="search">Search</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="could_not_refresh">Could not refresh: %s</string>
    <string name="could_not_load_search_results">Could not load search results: %s</string>
    <string name="unknown_error_occurred">An unknown error occurred</string>
    <string name="retry">Retry</string>
    <string name="refresh">Refresh</string>
    <string name="no_bookmarks">No bookmarks</string>
    <string name="no_results_found">No results found</string>
    <string name="search_instructions">Tap the magnifying glass to start searching</string>
    <string name="delete_all_bookmarks">Delete all bookmarks</string>
    <string name="imageview">ImageView</string>
    <string name="search_query_hint">"Search for topics, locations &amp; sources"</string>
    <string name="splash_screen_icon">Splash Screen Icon</string>
    <string name="technology">Technology</string>
    <string name="india">India</string>
    <string name="sports">Sports</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="science">Science</string>
    <string name="health">Health</string>
</resources>
