<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <HorizontalScrollView
                android:id="@+id/horizontal_scroll_view"
                android:layout_width="match_parent"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_height="wrap_content">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chip_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/query_technology"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@string/technology" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/query_india"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@string/india" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/query_sports"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@string/sports" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/query_business"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@string/business" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/query_entertainment"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@string/entertainment" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/query_science"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@string/science" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/query_health"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@string/health" />

                </com.google.android.material.chip.ChipGroup>

            </HorizontalScrollView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/horizontal_scroll_view" />

            <TextView
                android:id="@+id/text_view_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/button_retry"
                android:layout_margin="8dp"
                android:gravity="center"
                android:visibility="gone"
                tools:text="An error occurred"
                tools:visibility="visible" />

            <Button
                android:id="@+id/button_retry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/retry"
                android:visibility="gone"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/text_view_no_results"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/no_results_found"
                android:visibility="gone"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/text_view_instructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/search_instructions"
                android:visibility="gone"
                tools:visibility="visible" />

        </RelativeLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>